--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="row">
-        <a href="/addtodo" class="btn btn-primary" >Add New Task</a>
+        <a class="btn btn-primary" data-toggle="modal" data-target="#addEditTodoModal">Add New Task</a>
     </div>
 
     <div class="row" th:if="${ not#lists.isEmpty(todos)}">
@@ -29,10 +29,14 @@
             <tr th:each="todo : ${todos}">
                 <td th:text="${todo.id}"></td>
                 <td th:text="${todo.todo}"></td>
-                <td><a th:href="@{/edittodo/{id}(id=${todo.id})}">Edit</a></td>
-                <td><a th:href="@{/deletetodo/{id}(id=${todo.id})}">Delete</a></td>
+                <td>
+                    <a href='#' data-toggle="modal" data-target="#addEditTodoModal" th:attrappend="data-id=${todo.id}">Edit</a>
+                </td>
+                <td>
+                    <a th:href="@{/deletetodo/{id}(id=${todo.id})}">Delete</a>
+                </td>
             </tr>
-            <table>
+        <table>
     </div>
     <div class="row" th:unless="${ not#lists.isEmpty(todos)}">
         <h5>No Task in Todo List</h5>
@@ -40,5 +44,58 @@
     <script src="webjars/jquery/3.5.1/jquery.min.js"></script>
     <script src="webjars/bootstrap/4.6.0/js/bootstrap.min.js"></script>
 </div>
+
+
+<div class="modal fade" id="addEditTodoModal" tabindex="-1" role="dialog" aria-labelledby="addTodoModal"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form id='addeditForm' action="#" th:action="@{/addtodo}" th:object="${todoObj}" method="post">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addTodoModalLabel">Add To Do</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+
+                            <input id = "todo_id" name = "id" type = "hidden" th:field="*{id}" />
+                            <input class="form-control" type="text" th:field="*{todo}" id="task" placeholder="Enter Task Here">
+    <!--                        <input type="submit" class="btn btn-primary " />-->
+
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <input type="submit" class="btn btn-primary" value="Save changes">
+                </div>
+            </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <script>
+        $('#addEditTodoModal').on('show.bs.modal', function(event) {
+            var id = $(event.relatedTarget).data('id');
+
+            if(id != undefined){
+                var url = '/gettodo/' + id;
+                $('#addTodoModalLabel').text('Edit Todo');
+                $('#addeditForm').attr('action', 'edittodo');
+                $.ajax({
+                    url: url,
+                    success: function (data) {
+                        $('#todo_id').val(data.id);
+                        $('#task').val(data.todo);
+
+                    }
+                });
+            }
+        });
+
+    </script>
+
 </body>
 </html>
