--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,16 +2,39 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login page</title>
+    <link href="webjars/bootstrap/4.6.0/css/bootstrap.min.css"
+          rel="stylesheet">
 </head>
 <body>
-<h1>Login page</h1>
-<p th:if="${loginError}" class="error">Wrong user or password</p>
-<form th:action="@{/login.html}" method="post">
-    <label for="username">Username</label>:
-    <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
-    <label for="password">Password</label>:
-    <input type="password" id="password" name="password" /> <br />
-    <input type="submit" value="Log in" />
-</form>
+<div class="container">
+    <h1>Login page</h1>
+    <div th:if="${param.error}">
+        <div class="alert alert-danger">
+            Invalid username or password.
+        </div>
+    </div>
+    <div th:if="${param.logout}">
+        <div class="alert alert-info">
+            You have been logged out.
+        </div>
+    </div>
+
+    <form th:action="@{/login}" method="post">
+        <div class="form-group">
+            <label for="username">Username</label>:
+            <input type="text" id="username" name="username" autofocus="autofocus"
+                   class="form-control"/>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>:
+            <input type="password" id="password" name="password"
+                   class="form-control"/>
+        </div>
+        <div class="form-group">
+            <input type="submit"
+                   class="form-control btn btn-info" value="Log in"/>
+        </div>
+    </form>
+</div>
 </body>
 </html>
